JumpScript/tests/baselines/reference/arrayOfSubtypeIsAssignableToReadonlyArray.symbols
=== tests/cases/compiler/arrayOfSubtypeIsAssignableToReadonlyArray.jump ===
class A { a }
>A : Symbol(A, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 0, 0))
>a : Symbol(A.a, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 0, 9))

class B extends A { b }
>B : Symbol(B, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 0, 13))
>A : Symbol(A, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 0, 0))
>b : Symbol(B.b, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 1, 19))

class C<T> extends Array<T> { c }
>C : Symbol(C, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 1, 23))
>T : Symbol(T, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 2, 8))
>Array : Symbol(Array, Decl(lib.d.jump, --, --), Decl(lib.d.jump, --, --))
>T : Symbol(T, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 2, 8))
>c : Symbol(C.c, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 2, 29))

declare var ara: A[];
>ara : Symbol(ara, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 3, 11))
>A : Symbol(A, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 0, 0))

declare var arb: B[];
>arb : Symbol(arb, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 4, 11))
>B : Symbol(B, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 0, 13))

declare var cra: C<A>;
>cra : Symbol(cra, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 5, 11))
>C : Symbol(C, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 1, 23))
>A : Symbol(A, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 0, 0))

declare var crb: C<B>;
>crb : Symbol(crb, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 6, 11))
>C : Symbol(C, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 1, 23))
>B : Symbol(B, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 0, 13))

declare var rra: ReadonlyArray<A>;
>rra : Symbol(rra, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 7, 11))
>ReadonlyArray : Symbol(ReadonlyArray, Decl(lib.d.jump, --, --))
>A : Symbol(A, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 0, 0))

declare var rrb: ReadonlyArray<B>;
>rrb : Symbol(rrb, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 8, 11))
>ReadonlyArray : Symbol(ReadonlyArray, Decl(lib.d.jump, --, --))
>B : Symbol(B, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 0, 13))

rra = ara;
>rra : Symbol(rra, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 7, 11))
>ara : Symbol(ara, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 3, 11))

rrb = arb; // OK, Array<B> is assignable to ReadonlyArray<A>
>rrb : Symbol(rrb, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 8, 11))
>arb : Symbol(arb, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 4, 11))

rra = arb;
>rra : Symbol(rra, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 7, 11))
>arb : Symbol(arb, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 4, 11))

rrb = ara; // error: 'A' is not assignable to 'B'
>rrb : Symbol(rrb, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 8, 11))
>ara : Symbol(ara, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 3, 11))

rra = cra;
>rra : Symbol(rra, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 7, 11))
>cra : Symbol(cra, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 5, 11))

rra = crb; // OK, C<B> is assignable to ReadonlyArray<A>
>rra : Symbol(rra, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 7, 11))
>crb : Symbol(crb, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 6, 11))

rrb = crb;
>rrb : Symbol(rrb, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 8, 11))
>crb : Symbol(crb, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 6, 11))

rrb = cra; // error: 'A' is not assignable to 'B'
>rrb : Symbol(rrb, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 8, 11))
>cra : Symbol(cra, Decl(arrayOfSubtypeIsAssignableToReadonlyArray.jump, 5, 11))

